Fix double horizontal scroll bar issue on windows machines

--- a/application/static/stylesheets/dl-frontend.css
+++ b/application/static/stylesheets/dl-frontend.css
@@ -6549,7 +6549,7 @@
 .data-table__viewer,
 .wide-table {
   padding-left: 10px;
-  overflow-x: auto;
+  overflow-x: scroll;
   overflow-y: hidden;
 }
 
@@ -6560,7 +6560,6 @@
 
 .data-table__wrapper {
   position: relative;
-  overflow-x: scroll;
 }
 
 .data-table {
